[package]
name = "superman"
version = "1.1.3"
edition = "2021"
authors = ["b1n <b1nhack@proton.me>"]
description = "Kill everything."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
ctrlc = "3.4.0"
dirs = "5.0.1"
sysinfo = "0.29.0"
windows-sys = { version = "0.48.0", features = ["Win32_System_Services", "Win32_Security", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"
debug = 0
split-debuginfo = "packed"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
